--- a/source/EXBP.Dipren.Data.SQLite/EXBP.Dipren.Data.SQLite.csproj
+++ b/source/EXBP.Dipren.Data.SQLite/EXBP.Dipren.Data.SQLite.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
+    <Nullable>disable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
@@ -12,6 +12,21 @@
 
   <ItemGroup>
     <ProjectReference Include="..\EXBP.Dipren\EXBP.Dipren.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="SQLiteEngineDataStoreResources.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>SQLiteEngineDataStoreResources.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="SQLiteEngineDataStoreResources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>SQLiteEngineDataStoreResources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
 
 </Project>
