Moves the project implementing the SQLite data store to the Store directory.

--- a/source/Store/SQLite/EXBP.Dipren.Data.SQLite.Tests/EXBP.Dipren.Data.SQLite.Tests.csproj
+++ b/source/Store/SQLite/EXBP.Dipren.Data.SQLite.Tests/EXBP.Dipren.Data.SQLite.Tests.csproj
@@ -19,8 +19,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\EXBP.Dipren.Tests\EXBP.Dipren.Tests.csproj" />
     <ProjectReference Include="..\EXBP.Dipren.Data.SQLite\EXBP.Dipren.Data.SQLite.csproj" />
-    <ProjectReference Include="..\EXBP.Dipren.Tests\EXBP.Dipren.Tests.csproj" />
   </ItemGroup>
 
 </Project>
