--- a/demo/EXBP.Dipren.Demo.SQLite/EXBP.Dipren.Demo.SQLite.csproj
+++ b/demo/EXBP.Dipren.Demo.SQLite/EXBP.Dipren.Demo.SQLite.csproj
@@ -12,8 +12,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\source\EXBP.Dipren.Data.SQLite\EXBP.Dipren.Data.SQLite.csproj" />
     <ProjectReference Include="..\..\source\EXBP.Dipren\EXBP.Dipren.csproj" />
+    <ProjectReference Include="..\..\source\Store\SQLite\EXBP.Dipren.Data.SQLite\EXBP.Dipren.Data.SQLite.csproj" />
   </ItemGroup>
 
   <ItemGroup>
