--- a/source/Store/SQLite/EXBP.Dipren.Data.SQLite/EXBP.Dipren.Data.SQLite.csproj
+++ b/source/Store/SQLite/EXBP.Dipren.Data.SQLite/EXBP.Dipren.Data.SQLite.csproj
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\EXBP.Dipren\EXBP.Dipren.csproj" />
+    <ProjectReference Include="..\..\..\EXBP.Dipren\EXBP.Dipren.csproj" />
   </ItemGroup>
 
   <ItemGroup>
