--- a/source/Store/Postgres/EXBP.Dipren.Data.Postgres/EXBP.Dipren.Data.Postgres.csproj
+++ b/source/Store/Postgres/EXBP.Dipren.Data.Postgres/EXBP.Dipren.Data.Postgres.csproj
@@ -7,25 +7,25 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="System.Data.SQLite.Core" Version="1.0.116" />
+    <PackageReference Include="Npgsql" Version="6.0.7" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\EXBP.Dipren\EXBP.Dipren.csproj" />
+    <ProjectReference Include="..\..\..\EXBP.Dipren\EXBP.Dipren.csproj" />
   </ItemGroup>
 
   <ItemGroup>
-    <Compile Update="SQLiteEngineDataStoreResources.Designer.cs">
+    <Compile Update="PostgresEngineDataStoreResources.Designer.cs">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
-      <DependentUpon>SQLiteEngineDataStoreResources.resx</DependentUpon>
+      <DependentUpon>PostgresEngineDataStoreResources.resx</DependentUpon>
     </Compile>
   </ItemGroup>
 
   <ItemGroup>
-    <EmbeddedResource Update="SQLiteEngineDataStoreResources.resx">
+    <EmbeddedResource Update="PostgresEngineDataStoreResources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>SQLiteEngineDataStoreResources.Designer.cs</LastGenOutput>
+      <LastGenOutput>PostgresEngineDataStoreResources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
 
