Includes the GuidKeyArithmeticsResources.resx file in the project file.

--- a/source/EXBP.Dipren/EXBP.Dipren.csproj
+++ b/source/EXBP.Dipren/EXBP.Dipren.csproj
@@ -22,6 +22,11 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>AssertResources.resx</DependentUpon>
     </Compile>
+    <Compile Update="GuidKeyArithmeticsResources.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>GuidKeyArithmeticsResources.resx</DependentUpon>
+    </Compile>
     <Compile Update="SchedulerResources.Designer.cs">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
@@ -51,6 +56,10 @@
     <EmbeddedResource Update="Diagnostics\AssertResources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>AssertResources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Update="GuidKeyArithmeticsResources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>GuidKeyArithmeticsResources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
     <EmbeddedResource Update="SchedulerResources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
