Updates the launch profile settings to more reasonable values.

--- a/demo/EXBP.Dipren.Demo.Postgres/Properties/launchSettings.json
+++ b/demo/EXBP.Dipren.Demo.Postgres/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "EXBP.Dipren.Demo.Postgres: Deploy": {
       "commandName": "Project",
-      "commandLineArgs": "deploy --database \"Host = localhost; Port = 5432; Database = postgres; User ID = postgres; Password = development\" --size 1000000"
+      "commandLineArgs": "deploy --database \"Host = localhost; Port = 5432; Database = postgres; User ID = postgres; Password = development\" --size 100000"
     },
     "EXBP.Dipren.Demo.Postgres: Remove": {
       "commandName": "Project",
@@ -10,11 +10,11 @@
     },
     "EXBP.Dipren.Demo.Postgres: Schedule": {
       "commandName": "Project",
-      "commandLineArgs": "schedule --database \"Host = localhost; Port = 5432; Database = postgres; User ID = postgres; Password = development\" --name dpj-002"
+      "commandLineArgs": "schedule --database \"Host = localhost; Port = 5432; Database = postgres; User ID = postgres; Password = development\" --name cuboid-001"
     },
     "EXBP.Dipren.Demo.Postgres: Process": {
       "commandName": "Project",
-      "commandLineArgs": "process --database \"Host = localhost; Port = 5432; Database = postgres; User ID = postgres; Password = development\" --name dpj-002 --batch-size 256 --batch-timeout 00:00:01 --clock-drift 00:00:00"
+      "commandLineArgs": "process --database \"Host = localhost; Port = 5432; Database = postgres; User ID = postgres; Password = development\" --name cuboid-001 --batch-size 256 --batch-timeout 00:00:02 --clock-drift 00:00:00"
     }
   }
 }
