--- a/demo/EXBP.Dipren.Demo.Postgres/Properties/launchSettings.json
+++ b/demo/EXBP.Dipren.Demo.Postgres/Properties/launchSettings.json
@@ -1,5 +1,9 @@
 {
   "profiles": {
+    "EXBP.Dipren.Demo.Postgres: Help": {
+      "commandName": "Project",
+      "commandLineArgs": "--help"
+    },
     "EXBP.Dipren.Demo.Postgres: Deploy": {
       "commandName": "Project",
       "commandLineArgs": "deploy --database \"Host = localhost; Port = 5432; Database = postgres; User ID = postgres; Password = development\" --size 100000"
