--- a/source/EXBP.Dipren/EXBP.Dipren.csproj
+++ b/source/EXBP.Dipren/EXBP.Dipren.csproj
@@ -32,6 +32,11 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>SchedulerResources.resx</DependentUpon>
     </Compile>
+    <Compile Update="StringKeyArithmeticsResources.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>StringKeyArithmeticsResources.resx</DependentUpon>
+    </Compile>
     <Compile Update="Telemetry\TextEventLoggerResources.Designer.cs">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
@@ -64,6 +69,10 @@
     <EmbeddedResource Update="SchedulerResources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>SchedulerResources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Update="StringKeyArithmeticsResources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>StringKeyArithmeticsResources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
     <EmbeddedResource Update="Telemetry\TextEventLoggerResources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
