Updates the publish-dipren github workflow to only build a package for EXBP.Dipren.

--- a/.github/workflows/publish-dipren.yml
+++ b/.github/workflows/publish-dipren.yml
@@ -4,7 +4,7 @@ on:
   [push]
 
 env:
-  SOURCE_DIRECTORY: ./source
+  SOURCE_DIRECTORY: ./source/EXBP.Dipren
   PACKAGE_DIRECTORY: ${{github.workspace}}/output
 
 jobs:
