--- a/.github/workflows/publish-dipren.yml
+++ b/.github/workflows/publish-dipren.yml
@@ -31,10 +31,10 @@ jobs:
       run: dotnet restore ${{env.SOURCE_DIRECTORY}}
 
     - name: 'Build solution'
-      run: dotnet build --configuration Release /p:Version=${VERSION} --no-restore ${{env.SOURCE_DIRECTORY}}
+      run: dotnet build --configuration Release /p:Version=${VERSION} -p:ContinuousIntegrationBuild=true --no-restore ${{env.SOURCE_DIRECTORY}}
 
     - name: 'Create Package'
-      run: dotnet pack ${{env.SOURCE_DIRECTORY}} --configuration Release --no-restore --no-build -p:PackageVersion=${VERSION} --output ${{env.PACKAGE_DIRECTORY}}
+      run: dotnet pack ${{env.SOURCE_DIRECTORY}} --configuration Release --no-restore --no-build -p:PackageVersion=${VERSION} -p:ContinuousIntegrationBuild=true --output ${{env.PACKAGE_DIRECTORY}}
 
     - name: 'Publish Package'
       run: dotnet nuget push ${{env.PACKAGE_DIRECTORY}}/*.nupkg --source ${{env.PACKAGE_GALLERY}} --api-key ${{secrets.NUGET_DIPREN_TOKEN}}
