--- a/source/Store/Postgres/EXBP.Dipren.Data.Postgres.Tests/EXBP.Dipren.Data.Postgres.Tests.csproj
+++ b/source/Store/Postgres/EXBP.Dipren.Data.Postgres.Tests/EXBP.Dipren.Data.Postgres.Tests.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <IsPublishable>False</IsPublishable>
   </PropertyGroup>
 
   <ItemGroup>
@@ -19,7 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\EXBP.Dipren.Tests\EXBP.Dipren.Tests.csproj" />
+    <ProjectReference Include="..\..\..\EXBP.Dipren.Data.Tests\EXBP.Dipren.Data.Tests.csproj" />
     <ProjectReference Include="..\..\..\EXBP.Dipren\EXBP.Dipren.csproj" />
     <ProjectReference Include="..\EXBP.Dipren.Data.Postgres\EXBP.Dipren.Data.Postgres.csproj" />
   </ItemGroup>
