--- a/source/EXBP.Dipren.Data.Tests/EXBP.Dipren.Data.Tests.csproj
+++ b/source/EXBP.Dipren.Data.Tests/EXBP.Dipren.Data.Tests.csproj
@@ -6,11 +6,12 @@
     <Nullable>disable</Nullable>
     <Title>DIPREN Data Store Tests</Title>
     <Authors>ch.jahnert</Authors>
-    <Description>Test set for verifying EngineDataStore implementations</Description>
+    <Description>NUnit test set for verifying DIPREN Data Store implementations</Description>
     <Copyright>Copyright (c) 2022 Christian Jähnert</Copyright>
     <PackageProjectUrl>https://github.com/chjahnert/exbp.dipren/wiki</PackageProjectUrl>
     <RepositoryUrl>https://github.com/chjahnert/exbp.dipren</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
+    <PackageLicenseFile>license</PackageLicenseFile>
     <Version>$(VersionPrefix)</Version>
     <PublishRepositoryUrl>true</PublishRepositoryUrl>
     <EmbedUntrackedSources>true</EmbedUntrackedSources>
@@ -19,6 +20,18 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Include="..\..\license">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+    <None Include="readme.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1" PrivateAssets="All" />
     <PackageReference Include="NUnit" Version="3.13.3" />
     <PackageReference Include="NUnit.Analyzers" Version="3.3.0" />
   </ItemGroup>
