Ensures that the readme.md file is properly referenced in the nuget package metadata.

--- a/source/EXBP.Dipren.Data.Tests/EXBP.Dipren.Data.Tests.csproj
+++ b/source/EXBP.Dipren.Data.Tests/EXBP.Dipren.Data.Tests.csproj
@@ -11,6 +11,7 @@
     <PackageProjectUrl>https://github.com/chjahnert/exbp.dipren/wiki</PackageProjectUrl>
     <RepositoryUrl>https://github.com/chjahnert/exbp.dipren</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
+    <PackageReadmeFile>readme.md</PackageReadmeFile>
     <PackageLicenseFile>license</PackageLicenseFile>
     <Version>$(VersionPrefix)</Version>
     <PublishRepositoryUrl>true</PublishRepositoryUrl>
