--- a/source/EXBP.Dipren/EXBP.Dipren.csproj
+++ b/source/EXBP.Dipren/EXBP.Dipren.csproj
@@ -26,11 +26,11 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Include="..\..\license">
+    <None Include="..\..\license" Visible="false">
       <Pack>True</Pack>
       <PackagePath>\</PackagePath>
     </None>
-    <None Include="..\..\readme.md">
+    <None Include="..\..\readme.md" Visible="false">
       <Pack>True</Pack>
       <PackagePath>\</PackagePath>
     </None>
