--- a/source/EXBP.Dipren/EXBP.Dipren.csproj
+++ b/source/EXBP.Dipren/EXBP.Dipren.csproj
@@ -19,6 +19,7 @@
     <PublishRepositoryUrl>true</PublishRepositoryUrl>
     <IncludeSymbols>true</IncludeSymbols>
     <EmbedUntrackedSources>true</EmbedUntrackedSources>
+    <GenerateDocumentationFile>True</GenerateDocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
@@ -26,11 +27,11 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Include="..\..\license">
+    <None Include="..\..\license" Visible="false">
       <Pack>True</Pack>
       <PackagePath>\</PackagePath>
     </None>
-    <None Include="..\..\readme.md">
+    <None Include="..\..\readme.md" Visible="false">
       <Pack>True</Pack>
       <PackagePath>\</PackagePath>
     </None>
