--- a/source/EXBP.Dipren.Data.Tests/EXBP.Dipren.Data.Tests.csproj
+++ b/source/EXBP.Dipren.Data.Tests/EXBP.Dipren.Data.Tests.csproj
@@ -13,7 +13,9 @@
     <RepositoryType>git</RepositoryType>
     <PackageReadmeFile>readme.md</PackageReadmeFile>
     <PackageLicenseFile>license</PackageLicenseFile>
-    <Version>$(VersionPrefix)</Version>
+    <BuildTimestamp>$([System.DateTime]::Now.ToString(yyyyMMddHHmm))</BuildTimestamp>
+    <VersionPrefix>1.0.0</VersionPrefix>
+    <VersionSuffix>dev-$(BuildTimestamp)</VersionSuffix>
     <PublishRepositoryUrl>true</PublishRepositoryUrl>
     <EmbedUntrackedSources>true</EmbedUntrackedSources>
     <IncludeSymbols>True</IncludeSymbols>
