--- a/source/EXBP.Dipren.Data.Tests/EXBP.Dipren.Data.Tests.csproj
+++ b/source/EXBP.Dipren.Data.Tests/EXBP.Dipren.Data.Tests.csproj
@@ -40,6 +40,8 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="ScottPlot" Version="4.1.60" />
+    <PackageReference Include="System.Text.Json" Version="7.0.1" />
   </ItemGroup>
 
   <ItemGroup>
