--- a/source/EXBP.Dipren.Tests/EXBP.Dipren.Tests.csproj
+++ b/source/EXBP.Dipren.Tests/EXBP.Dipren.Tests.csproj
@@ -27,6 +27,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="OpenTelemetry.Exporter.InMemory" Version="1.4.0-rc.2" />
   </ItemGroup>
 
   <ItemGroup>
